--- a/activities.html
+++ b/activities.html
@@ -27,12 +27,12 @@
             <ul class="navbar-nav ml-auto">
                <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="index-e.html">
-                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Inicio</p>
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Home</p>
                   </a>
                </li>
                <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="international-programs.html">
-                     <p class="elemento-navbar" style="color: rgb(41,47,109)">International programs</p>
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">International<br>programs</p>
                   </a>
                </li>
                <li class="nav-item">
@@ -60,7 +60,7 @@
                 <div class="col-sm text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i class="fas fa-4x fa-chalkboard-teacher sr-icons"></i>
-                        <h3 class="mb-3"><a class="actividades" href="profesores.html">International<br>teachers</a>
+                        <h3 class="mb-3"><a class="actividades" href="teachers.html">International<br>teachers</a>
                         </h3>
                     </div>
                 </div>
