--- a/agreements.html
+++ b/agreements.html
@@ -27,12 +27,12 @@
             <ul class="navbar-nav ml-auto">
                <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="index-e.html">
-                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Inicio</p>
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Home</p>
                   </a>
                </li>
                <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="international-programs.html">
-                     <p class="elemento-navbar" style="color: rgb(41,47,109)">International programs</p>
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">International<br>programs</p>
                   </a>
                </li>
                <li class="nav-item">
@@ -86,9 +86,9 @@
                     It is a state and public university, at the service of society, guided by values ​​such as
                     excellence, pluralism, tolerance, respect for people, academic freedom, social responsibility,
                     humanism, cooperation.</p>
-                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/mba-negocios-digitales">
+                <a class="btn-list btn-primary" href="http://www.upb.edu/es/madeusach">
                     Find out more</a>
-                <a class="btn-list btn-primary btn-derecha" href="http://www.upv.es/">Visit the university</a>
+                <a class="btn-list btn-primary btn-derecha" href="https://www.usach.cl/">Visit the university</a>
             </div>
         </div>
         <hr>
@@ -105,9 +105,9 @@
                     Since its founding in 1971 as the first private science university for business administration, EBS
                     Business School represents scientific excellence in research and teaching,
                     innovation and entrepreneurship.</p>
-                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/mba-negocios-digitales">
+                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/doble-titulaci%C3%B3n-ebs-business-school">
                     Find out more</a>
-                <a class="btn-list btn-primary btn-derecha" href="http://www.upv.es/">Visit the university</a>
+                <a class="btn-list btn-primary btn-derecha" href="https://www.ebs.edu/en/faculty/ebs-business-school">Visit the university</a>
             </div>
         </div>
         <hr>
@@ -121,11 +121,10 @@
             </div>
             <div class="col-md-8">
                 <h4>Florida Gulf Coast</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/mba-negocios-digitales">
+                <p>FGCU is a top ranked public university in Southwest Florida that offers undergraduate and graduate degree programs.</p>
+                <a class="btn-list btn-primary" href="https://www.fgcu.edu/">
                     Find out more</a>
-                <a class="btn-list btn-primary btn-derecha" href="http://www.upv.es/">Visit the university</a>
+                <a class="btn-list btn-primary btn-derecha" href="https://www.fgcu.edu/?gclid=Cj0KCQjw3PLnBRCpARIsAKaUbgvFt1wB_2w2KWWhj7Cuy3O3NqKa-etwVFNsdakLda6j471anilAOyYaAoXQEALw_wcB">Visit the university</a>
             </div>
         </div>
         <hr>
@@ -136,14 +135,14 @@
                     src="images/convenios/incae.jpg" alt="">
             </div>
             <div class="col-md-8">
-                <h4>Instituto Centroamericano de Administración de Empresas</h4>
+                <h4>INCAE</h4>
                 <p>
                     Central American Business School, currently has two locations, the Francisco de Sola campus in
                     Nicaragua and the Walter Kissling Gam campus in Costa Rica. It is recognized as one of the best
                     business schools in Latin America and worldwide.</p>
-                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/mba-negocios-digitales">
+                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/capstone-course">
                     Find out more</a>
-                <a class="btn-list btn-primary btn-derecha" href="http://www.upv.es/">Visit the university</a>
+                <a class="btn-list btn-primary btn-derecha" href="http://www.incae.edu/">Visit the university</a>
             </div>
         </div>
         <hr>
@@ -160,9 +159,9 @@
                     established on July 25, 1963 within the framework of an agreement between the governments of Peru
                     and the United States of America and its organization and implementation was entrusted to the
                     Graduate Business School of Stanford University, California.</p>
-                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/mba-negocios-digitales">
+                <a class="btn-list btn-primary" href="https://www.esan.edu.pe/semana-internacional/finances/index.php">
                     Find out more</a>
-                <a class="btn-list btn-primary btn-derecha" href="http://www.upv.es/">Visit the university</a>
+                <a class="btn-list btn-primary btn-derecha" href="https://ue.edu.pe/">Visit the university</a>
             </div>
         </div>
         <hr>
@@ -179,9 +178,9 @@
                     business schools' (Financial Times European Business Scholl Ranking 2012). Our masters and MBAs are
                     offered in various formats and adaptable to the needs of students, both for recent graduates and for
                     professionals and managers</p><a class="btn-list btn-primary"
-                    href="http://www.upb.edu/es/contenido/mba-negocios-digitales">
+                    href="https://www.ie.edu/">
                     Find out more</a>
-                <a class="btn-list btn-primary btn-derecha" href="http://www.upv.es/">Visit the university</a>
+                <a class="btn-list btn-primary btn-derecha" href="https://www.ie.edu/">Visit the university</a>
             </div>
         </div>
         <hr>
@@ -197,9 +196,9 @@
                     Missouri State University is a public and comprehensive university system with a mission in public
                     affairs. Its purpose is to develop fully educated people with a focus on ethical leadership,
                     cultural competence and community participation.</p>
-                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/mba-negocios-digitales">
+                <a class="btn-list btn-primary" href="https://gip.missouristate.edu/mps/">
                     Find out more</a>
-                <a class="btn-list btn-primary btn-derecha" href="http://www.upv.es/">Visit the university</a>
+                <a class="btn-list btn-primary btn-derecha" href="https://graduate.missouristate.edu/catalog/prog_MPS_Environmental_Management.htm">Visit the university</a>
             </div>
         </div>
         <hr>
@@ -217,9 +216,9 @@
                     programs allow students to have a global vision and experience. The students
                     They are very active in terms of attending international programs to understand different cultures
                     and develop their leadership skills.</p>
-                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/mba-negocios-digitales">
+                <a class="btn-list btn-primary" href="http://www.sias.edu.cn/">
                     Find out more</a>
-                <a class="btn-list btn-primary btn-derecha" href="http://www.upv.es/">Visit the university</a>
+                <a class="btn-list btn-primary btn-derecha" href="http://www.sias.edu.cn/">Visit the university</a>
             </div>
         </div>
         <hr>
@@ -237,9 +236,9 @@
                     university level. It is located in an urban area in the heart of the San Juan metropolitan area. It
                     has an undergraduate and graduate academic offer with 37 baccalaureate programs, 4 associate
                     degrees, 19 master's programs and 9 professional certificates.</p>
-                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/mba-negocios-digitales">
+                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/doble-titulaci%C3%B3n-con-la-universidad-sagrado-coraz%C3%B3ns">
                     Find out more</a>
-                <a class="btn-list btn-primary btn-derecha" href="http://www.upv.es/">Visit the university</a>
+                <a class="btn-list btn-primary btn-derecha" href="http://www.sagrado.edu/">Visit the university</a>
             </div>
         </div>
         <hr>
@@ -258,9 +257,9 @@
                     preparation of each of its students, through individualized attention and a study program that
                     combines the mastery of the most advanced knowledge and techniques with humanistic and ethical
                     training.</p>
-                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/mba-negocios-digitales">
+                <a class="btn-list btn-primary" href="http://www.upb.edu/es/contenido/doble-titulaci%C3%B3n-universidad-tomas-more">
                     Find out more</a>
-                <a class="btn-list btn-primary btn-derecha" href="http://www.upv.es/">Visit the university</a>
+                <a class="btn-list btn-primary btn-derecha" href="http://www.unithomasmore.edu.ni/">Visit the university</a>
             </div>
         </div>
         <hr>
