--- a/convenios.html
+++ b/convenios.html
@@ -32,7 +32,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="programas-internacionales.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Programas internacionales</p>
+                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Programas<br>internacionales</p>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -103,7 +103,7 @@
                     innovación y emprendimiento.</p>
                 <a class="btn-list btn-primary"
                     href="http://www.upb.edu/es/contenido/doble-titulaci%C3%B3n-ebs-business-school">Averigua más</a>
-                <a class="btn-list btn-primary btn-derecha" href="https://www.fgcu.edu/">Visita la universidad</a>
+                <a class="btn-list btn-primary btn-derecha" href="https://www.ebs.edu/en/faculty/ebs-business-school">Visita la universidad</a>
             </div>
         </div>
         <hr>
@@ -117,8 +117,7 @@
             </div>
             <div class="col-md-8">
                 <h4>Florida Gulf Coast</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                <p>FGCU es una de las mejores universidades públicas del suroeste de Florida que ofrece programas de pregrado y posgrado.</p>
                 <a class="btn-list btn-primary" href="https://www.fgcu.edu/">Averigua más</a>
                 <a class="btn-list btn-primary btn-derecha" href="https://www.fgcu.edu/">Visita la universidad</a>
             </div>
@@ -154,7 +153,7 @@
                     a la Escuela de Negocios para Graduados de la Universidad de Stanford, California.</p>
                 <a class="btn-list btn-primary"
                     href="https://www.esan.edu.pe/semana-internacional/finances/index.php">Averigua más</a>
-                <a class="btn-list btn-primary btn-derecha" href="http://www.ue.edu.pe/">Visita la universidad</a>
+                <a class="btn-list btn-primary btn-derecha" href="https://ue.edu.pe/">Visita la universidad</a>
             </div>
         </div>
         <hr>
