--- a/index-e.html
+++ b/index-e.html
@@ -11,6 +11,7 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="js/video.js"></script>
 </head>
 
 <body>
@@ -36,7 +37,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="international-programs.html">
-                            <p class="elemento-navbar">International programs</p>
+                            <p class="elemento-navbar">International<br>programs</p>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -73,7 +74,7 @@
                         <a pageScroll class="btn btn-primary btn-xl js-scroll-trigger" href="#about">LEARN MORE</a>
                     </div>
                 </div>
-                <button id="botonSonido" class="fas fa-music fa-2x"></button>
+                <button id="botonSonido" class="fas fa-music fa-2x" onclick="activarSonido()"></button>
                 <a href="index.html" id="botonIdioma">Español</a>
             </div>
         </section>
@@ -125,7 +126,7 @@
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_programas_internacionales"
                             class="fa fa-4x far fa-list-alt text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/programas">International programs</a></h3>
+                        <h3 class="mb-3"><a href="international-programs.html">International programs</a></h3>
                         <p class="text-muted mb-0">
                             Designed to develop professionals with a global vision.</p>
                     </div>
@@ -133,7 +134,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_convenios" class="fa fa-4x far fa-handshake text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/convenios">Agreements</a></h3>
+                        <h3 class="mb-3"><a href="agreements.html">Agreements</a></h3>
                         <p class="text-muted mb-0">
                             The universities that support us in our programs.</p>
                     </div>
@@ -141,14 +142,14 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_membresias" class="fa fa-4x fas fa-globe text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/membresias">Memberships</a></h3>
+                        <h3 class="mb-3"><a href="memberships.html">Memberships</a></h3>
                         <p class="text-muted mb-0">Check our latest memberships.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_actividades" class="fa fa-4x far fa-newspaper text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/actividades">Activities</a></h3>
+                        <h3 class="mb-3"><a href="activities.html">Activities</a></h3>
                         <p class="text-muted mb-0">The news of our university.</p>
                     </div>
                 </div>
