--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="js/video.js"></script>
 </head>
 
 <body>
@@ -36,7 +37,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="programas-internacionales.html">
-                            <p class="elemento-navbar">Programas internacionales</p>
+                            <p class="elemento-navbar text-center">Programas<br>internacionales</p>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -73,7 +74,7 @@
                         <a pageScroll class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Aprende más</a>
                     </div>
                 </div>
-                <button id="botonSonido" class="fas fa-music fa-2x"></button>
+                <button id="botonSonido" class="fas fa-music fa-2x" onclick="activarSonido()"></button>
                 <a href="index-e.html" id="botonIdioma">English</a>
             </div>
         </section>
@@ -124,28 +125,28 @@
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_programas_internacionales"
                             class="fa fa-4x far fa-list-alt text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/programas">Programas internacionales</a></h3>
+                        <h3 class="mb-3"><a href="programas-internacionales.html">Programas internacionales</a></h3>
                         <p class="text-muted mb-0">Diseñados para desarrollar profesionales con visión global.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_convenios" class="fa fa-4x far fa-handshake text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/convenios">Convenios</a></h3>
+                        <h3 class="mb-3"><a href="convenios.html">Convenios</a></h3>
                         <p class="text-muted mb-0">Las universidades que nos apoyan en nuestros programas.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_membresias" class="fa fa-4x fas fa-globe text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/membresias">Membresías</a></h3>
+                        <h3 class="mb-3"><a href="membresias.html">Membresías</a></h3>
                         <p class="text-muted mb-0">Revisa nuestras últimas membresías.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_actividades" class="fa fa-4x far fa-newspaper text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/actividades">Actividades internacionales</a></h3>
+                        <h3 class="mb-3"><a href="actividades.html">Actividades internacionales</a></h3>
                         <p class="text-muted mb-0">La actualidad de nuestra universidad.</p>
                     </div>
                 </div>
