--- a/noticias.html
+++ b/noticias.html
@@ -31,7 +31,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="programas-internacionales.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Programas internacionales</p>
+                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Programas<br>internacionales</p>
                         </a>
                     </li>
                     <li class="nav-item">
