--- a/top-management-programs.html
+++ b/top-management-programs.html
@@ -27,12 +27,12 @@
             <ul class="navbar-nav ml-auto">
                <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="index-e.html">
-                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Inicio</p>
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Home</p>
                   </a>
                </li>
                <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="international-programs.html">
-                     <p class="elemento-navbar" style="color: rgb(41,47,109)">International programs</p>
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">International<br>programs</p>
                   </a>
                </li>
                <li class="nav-item">
