--- a/actividades.html
+++ b/actividades.html
@@ -90,8 +90,7 @@
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="section-heading">Contacto</h2>
                     <hr class="my-4">
-                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el tercer piso,
-                        I oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el segundo piso, oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
                 </div>
             </div>
             <div class="row">
