--- a/agreements.html
+++ b/agreements.html
@@ -273,8 +273,7 @@
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="section-heading">Contact</h2>
                     <hr class="my-4">
-                    <address class="mb-5">UPB Campus. Cochabamba, Bolivia.<br>Postgraduate building on the third floor,
-                        I internationalization office.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                    <address class="mb-5">UPB Campus. Cochabamba, Bolivia.<br>Postgraduate building on the second floor, internationalization office.<br>Av. Capitán Ustariz Km. 6,5.</address>
                 </div>
             </div>
             <div class="row">
