--- a/index-e.html
+++ b/index-e.html
@@ -81,7 +81,7 @@
         <div class="fullscreen-bg">
             <video id="mi-video" loop autoplay muted class="fullscreen">
                 <source
-                    src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/Bolivia%20te%20Espera%20(HD).mp4?alt=media&token=012ec6a6-e2f5-4a62-bc99-df4e3a659000"
+                    src="videos/BoliviaTeEspera.mp4"
                     type="video/mp4">
             </video>
         </div>
@@ -106,7 +106,7 @@
     </section>
 
     <section class="masthead text-center text-white d-flex"
-        style="height: 800px;background-image: url(http://www.clker.com/cliparts/O/w/K/n/d/f/blue-map.svg);">
+        style="height: 800px;background-image: url(images/mapa-azul.svg);">
         <div class="container my-auto">
         </div>
     </section>
@@ -167,7 +167,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     Universitat Politècnica de València
@@ -184,7 +184,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     Florida Gulf Coast University
@@ -201,7 +201,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     SIAS International University
@@ -218,7 +218,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     INCAE
@@ -235,7 +235,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     ESAN
@@ -251,7 +251,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     Universidad de Santiago de Chile
@@ -264,7 +264,7 @@
         </div>
     </section>
     <section class="masthead text-center text-white d-flex"
-        style="height: 800px;background-image: url(http://www.clker.com/cliparts/O/w/K/n/d/f/blue-map.svg);">
+        style="height: 800px;background-image: url(images/mapa-azul.svg);">
         <div class="container my-auto">
         </div>
     </section>
@@ -276,8 +276,7 @@
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="section-heading">Contact</h2>
                     <hr class="my-4">
-                    <address class="mb-5">UPB Campus. Cochabamba, Bolivia.<br>Postgraduate building on the third floor,
-                        I internationalization office.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                    <address class="mb-5">UPB Campus. Cochabamba, Bolivia.<br>Postgraduate building on the second floor, internationalization office.<br>Av. Capitán Ustariz Km. 6,5.</address>
                 </div>
             </div>
             <div class="row">
