--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="fullscreen-bg">
             <video id="mi-video" loop autoplay muted class="fullscreen">
                 <source
-                    src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/Bolivia%20te%20Espera%20(HD).mp4?alt=media&token=012ec6a6-e2f5-4a62-bc99-df4e3a659000"
+                    src="videos/BoliviaTeEspera.mp4"
                     type="video/mp4">
             </video>
         </div>
@@ -105,7 +105,7 @@
     </section>
 
     <section class="masthead text-center text-white d-flex"
-        style="height: 800px;background-image: url(http://www.clker.com/cliparts/O/w/K/n/d/f/blue-map.svg);">
+        style="height: 800px;background-image: url(images/mapa-azul.svg);">
         <div class="container my-auto">
         </div>
     </section>
@@ -261,7 +261,7 @@
         </div>
     </section>
     <section class="masthead text-center text-white d-flex"
-        style="height: 800px;background-image: url(http://www.clker.com/cliparts/O/w/K/n/d/f/blue-map.svg);">
+        style="height: 800px;background-image: url(images/mapa-azul.svg);">
         <div class="container my-auto">
         </div>
     </section>
@@ -273,8 +273,7 @@
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="section-heading">Contacto</h2>
                     <hr class="my-4">
-                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el tercer piso,
-                        I oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el segundo piso, oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
                 </div>
             </div>
             <div class="row">
