--- a/teachers.html
+++ b/teachers.html
@@ -65,7 +65,7 @@
                             <div class="row" id="columna">
                                 <div class="col text-center">
                                     <img class="img-fluid" id="imagenCM"
-                                            src="http://www.upb.edu/sites/default/files/pictures/imagen1.png" alt=""
+                                            src="images/profesores/cm.png" alt=""
                                             style="width: 60%">
                                 </div>
                                 <div id="texto" class="col">
@@ -94,7 +94,7 @@
                         </div>
                         <p id="abajo" style="text-align: center;"><img class="img-fluid"
                                 style="height: 500px; width: 1000px;"
-                                src="http://www.upb.edu/sites/default/files/pictures/image2.jpg" alt=""></p>
+                                src="images/profesores/conf.jpg" alt=""></p>
                         <br>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                             </p>
                         </div>
                         <p id="abajo" style="text-align: center;"><img class="img-fluid"
-                                src="http://www.upb.edu/sites/default/files/pictures/IMG_0958.JPG" alt=""></p>
+                                src="images/profesores/wn.jfif" alt=""></p>
                     </div>
                 </div>
             </div>
@@ -125,8 +125,7 @@
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="section-heading">Contact</h2>
                     <hr class="my-4">
-                    <address class="mb-5">UPB Campus. Cochabamba, Bolivia.<br>Postgraduate building on the third floor,
-                        I internationalization office.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                    <address class="mb-5">UPB Campus. Cochabamba, Bolivia.<br>Postgraduate building on the second floor, internationalization office.<br>Av. Capitán Ustariz Km. 6,5.</address>
                 </div>
             </div>
             <div class="row">
