--- a/convenios.html
+++ b/convenios.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
         <div class="container">
-            <a href="/" id="logo1" class="navbar-brand"><img
+            <a href="index.html" id="logo1" class="navbar-brand"><img
                     src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/Marcas%20UPB-07.png?alt=media&token=f0be8581-a970-41d5-80a5-fc3a6d2df0a2"
                     style="height: 60px;"></a>
             <button class="navbar-toggler navbar-toggler-right" (click)="toggleNavbar()" type="button"
@@ -264,8 +264,7 @@
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="section-heading">Contacto</h2>
                     <hr class="my-4">
-                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el tercer piso,
-                        oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el segundo piso, oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
                 </div>
             </div>
             <div class="row">
