--- a/noticias.html
+++ b/noticias.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
         <div class="container">
-            <a href="/" id="logo1" class="navbar-brand"><img src="images/logo/Marcas UPB-07.png"
+            <a href="index.html" id="logo1" class="navbar-brand"><img src="images/logo/Marcas UPB-07.png"
                     style="height: 60px;"></a>
             <button class="navbar-toggler navbar-toggler-right" (click)="toggleNavbar()" type="button"
                 data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
@@ -86,8 +86,7 @@
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="section-heading">Contacto</h2>
                     <hr class="my-4">
-                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el tercer piso,
-                        I oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el segundo piso, oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
                 </div>
             </div>
             <div class="row">
