--- a/profesores.html
+++ b/profesores.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
         <div class="container">
-            <a href="/" id="logo1" class="navbar-brand"><img
+            <a href="index.html" id="logo1" class="navbar-brand"><img
                     src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/Marcas%20UPB-07.png?alt=media&token=f0be8581-a970-41d5-80a5-fc3a6d2df0a2"
                     style="height: 60px;"></a>
             <button class="navbar-toggler navbar-toggler-right" (click)="toggleNavbar()" type="button"
@@ -65,7 +65,7 @@
                             <div class="row" id="columna">
                                 <div class="col text-center">
                                     <img class="img-fluid" id="imagenCM"
-                                            src="http://www.upb.edu/sites/default/files/pictures/imagen1.png" alt=""
+                                            src="images/profesores/cm.png" alt=""
                                             style="width: 60%">
                                 </div>
                                 <div id="texto" class="col">
@@ -121,7 +121,7 @@
                         </div>
                         <p id="abajo" style="text-align: center;"><img class="img-fluid"
                                 style="height: 500px; width: 1000px;"
-                                src="http://www.upb.edu/sites/default/files/pictures/image2.jpg" alt=""></p>
+                                src="images/profesores/conf.jpg" alt=""></p>
                         <br>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                                 alumnos y exalumnos de la UPB, así como el público en general.</p>
                         </div>
                         <p id="abajo" style="text-align: center;"><img class="img-fluid"
-                                src="http://www.upb.edu/sites/default/files/pictures/IMG_0958.JPG" alt=""></p>
+                                src="images/profesores/wn.jfif" alt=""></p>
                     </div>
                 </div>
             </div>
@@ -159,8 +159,7 @@
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="section-heading">Contacto</h2>
                     <hr class="my-4">
-                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el tercer piso,
-                        I oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el segundo piso, oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
                 </div>
             </div>
             <div class="row">
