--- a/index-e.html
+++ b/index-e.html
@@ -68,10 +68,10 @@
                         <h1 class="text-uppercase text-white">
                             <strong>INTERNATIONALIZATION<br>POSTGRADUATE UPB</strong>
                         </h1>
-                        <hr class="light my-4">
+                        <hr class="light my-4 hr-esp">
                     </div>
                     <div class="col-md-8 mx-auto mb-5">
-                        <a pageScroll class="btn btn-primary btn-xl js-scroll-trigger" href="#about">LEARN MORE</a>
+                        <a pageScroll class="btn btn-primary btn-xl js-scroll-trigger btn-prin" href="#about">LEARN MORE</a>
                     </div>
                 </div>
                 <button id="botonSonido" class="fas fa-music fa-2x" onclick="activarSonido()"></button>
