--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="sedes.html">
+                            <p class="elemento-navbar">Sedes</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="convenios.html">
                             <p class="elemento-navbar">Convenios</p>
                         </a>
@@ -68,10 +73,10 @@
                         <h1 class="text-uppercase text-white">
                             <strong>INTERNACIONALIZACIÓN<br>POSTGRADO UPB</strong>
                         </h1>
-                        <hr class="light my-4">
+                        <hr class="light my-4 hr-esp">
                     </div>
                     <div class="col-md-8 mx-auto mb-5">
-                        <a pageScroll class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Aprende más</a>
+                        <a pageScroll class="btn btn-primary btn-xl js-scroll-trigger btn-prin" href="#about">Aprende más</a>
                     </div>
                 </div>
                 <button id="botonSonido" class="fas fa-music fa-2x" onclick="activarSonido()"></button>
