--- a/sedes.html
+++ b/sedes.html
@@ -88,73 +88,76 @@
     <div class="container" style="margin-top: 100px;">
       <h2>Sedes</h2>
       <hr />
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-              <img
-                src="https://i1.wp.com/www.aden.org/files/2017/07/aden-panama-miniatura-550x400.jpg?ssl=1"
-                class="card-img-top"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                  <img
+                    src="https://i1.wp.com/www.aden.org/files/2017/07/aden-panama-miniatura-550x400.jpg?ssl=1"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                      Some quick example text to build on the card title and
+                      make up the bulk of the card's content.
+                    </p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-              <img
-                src="https://i2.wp.com/www.aden.org/files/2017/07/aden-bogota-miniatura-550x400.jpg?zoom=1.25&ssl=1"
-                class="card-img-top"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                  <img
+                    src="https://i2.wp.com/www.aden.org/files/2017/07/aden-bogota-miniatura-550x400.jpg?zoom=1.25&ssl=1"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                      Some quick example text to build on the card title and
+                      make up the bulk of the card's content.
+                    </p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-              <img
-                src="https://i0.wp.com/www.aden.org/files/2017/04/aden-costa-rica-miniatura-550x400.jpg?ssl=1"
-                class="card-img-top"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                  <img
+                    src="https://i0.wp.com/www.aden.org/files/2017/04/aden-costa-rica-miniatura-550x400.jpg?ssl=1"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                      Some quick example text to build on the card title and
+                      make up the bulk of the card's content.
+                    </p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="col-sm">
+          <iframe
+            src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Funiversidad.privada.boliviana%2F&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+            width="100%"
+            height="100%"
+            style="border:none;overflow:hidden"
+            scrolling="no"
+            frameborder="0"
+            allowTransparency="true"
+            allow="encrypted-media"
+          ></iframe>
+        </div>
       </div>
     </div>
 
-    <div style="margin:auto">
-      <iframe
-        src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Funiversidad.privada.boliviana%2F&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-        width="500"
-        height="500"
-        style="border:none;overflow:hidden"
-        scrolling="no"
-        frameborder="0"
-        allowTransparency="true"
-        allow="encrypted-media"
-      ></iframe>
-    </div>
-    
     <footer>
       <div class="container">
         <br /><br />
