--- a/sedes.html
+++ b/sedes.html
@@ -17,14 +17,21 @@
   </head>
 
   <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-light fixed-top"
-      id="mainNav"
-    >
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a href="index.html" id="logo1" class="navbar-brand"
+        <a
+          href="index.html"
+          id="logo1"
+          class="navbar-brand"
+          style="display: none"
           ><img
             src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/Marcas%20UPB-07.png?alt=media&token=f0be8581-a970-41d5-80a5-fc3a6d2df0a2"
+            style="height: 60px;"
+        /></a>
+
+        <a href="index.html" id="logo2" class="navbar-brand"
+          ><img
+            src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/MARCAS.png?alt=media&token=750702a9-88ad-40bb-ba97-65468fc38d0e"
             style="height: 60px;"
         /></a>
 
@@ -43,10 +50,8 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="index.html">
-                <p class="elemento-navbar" style="color: rgb(41,47,109)">
-                  Inicio
-                </p>
+              <a class="nav-link js-scroll-trigger" href="">
+                <p class="elemento-navbar">Inicio</p>
               </a>
             </li>
             <li class="nav-item">
@@ -54,30 +59,29 @@
                 class="nav-link js-scroll-trigger"
                 href="programas-internacionales.html"
               >
-                <p class="elemento-navbar" style="color: rgb(41,47,109)">
+                <p class="elemento-navbar text-center">
                   Programas<br />internacionales
                 </p>
               </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="sedes.html">
+                <p class="elemento-navbar">Sedes</p>
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="convenios.html">
-                <p class="elemento-navbar" style="color: rgb(41,47,109)">
-                  Convenios
-                </p>
+                <p class="elemento-navbar">Convenios</p>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="membresias.html">
-                <p class="elemento-navbar" style="color: rgb(41,47,109)">
-                  Membresías
-                </p>
+                <p class="elemento-navbar">Membresías</p>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="actividades.html">
-                <p class="elemento-navbar" style="color: rgb(41,47,109)">
-                  Actividades
-                </p>
+                <p class="elemento-navbar">Actividades</p>
               </a>
             </li>
           </ul>
